[Ayush Gupta] Refactored. Fixed API Issues for media, post visibility and deleted users